[gd_scene load_steps=4 format=3 uid="uid://c133hj4l1vgu6"]

[ext_resource type="Texture2D" uid="uid://bl0xqb50vkq8q" path="res://assets/ui/panel-030.png" id="1_6immy"]
[ext_resource type="Script" path="res://frontend/ui/game_creation.gd" id="1_hbw6a"]
[ext_resource type="Texture2D" uid="uid://c0acfhkxqh76w" path="res://assets/pieces_sprite_sheet.png" id="3_kn228"]

[node name="GameCreation" type="Node2D"]
script = ExtResource("1_hbw6a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchor_left = 0.29
anchor_top = 0.4
anchor_right = 0.71
anchor_bottom = 0.4
offset_top = -49.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftButton" type="Button" parent="CanvasLayer/Control/Buttons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -45.0
offset_right = 61.0
offset_bottom = 45.0
grow_vertical = 2
size_flags_vertical = 0
focus_neighbor_right = NodePath("../RightButton")
text = "<"

[node name="RightButton" type="Button" parent="CanvasLayer/Control/Buttons"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -45.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 0
focus_neighbor_left = NodePath("../LeftButton")
text = ">"

[node name="Divs" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.65
anchor_right = 0.85
anchor_bottom = 1.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="Left" type="NinePatchRect" parent="CanvasLayer/Control/Divs"]
self_modulate = Color(0.572988, 0.572988, 0.572988, 1)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_6immy")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 48
patch_margin_bottom = 48

[node name="Middle" type="NinePatchRect" parent="CanvasLayer/Control/Divs"]
self_modulate = Color(0.572988, 0.572988, 0.572988, 1)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource("1_6immy")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 48
patch_margin_bottom = 48

[node name="Right" type="NinePatchRect" parent="CanvasLayer/Control/Divs"]
self_modulate = Color(0.572988, 0.572988, 0.572988, 1)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_6immy")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 48
patch_margin_bottom = 48

[node name="StartButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -236.0
offset_top = -90.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
focus_neighbor_right = NodePath("../RightButton")
text = "Start Game"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="FactionSlider" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="Monarchy" type="Node2D" parent="FactionSlider"]

[node name="Queen" type="Sprite2D" parent="FactionSlider/Monarchy"]
self_modulate = Color(0.589096, 0.589096, 0.589096, 1)
position = Vector2(109, -78)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
centered = false
offset = Vector2(-6.5, -14)
region_enabled = true
region_rect = Rect2(48, 83, 13, 21)

[node name="King" type="Sprite2D" parent="FactionSlider/Monarchy"]
position = Vector2(-51, -62)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
centered = false
offset = Vector2(-6.5, -16)
region_enabled = true
region_rect = Rect2(78, 81, 13, 23)

[node name="Sharpshooters" type="Node2D" parent="FactionSlider"]
position = Vector2(650, 0)

[node name="Rook" type="Sprite2D" parent="FactionSlider/Sharpshooters"]
self_modulate = Color(0.588235, 0.588235, 0.588235, 1)
position = Vector2(-51, -67)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
offset = Vector2(0, -2)
region_enabled = true
region_rect = Rect2(77, 39, 13, 17)

[node name="Bishop" type="Sprite2D" parent="FactionSlider/Sharpshooters"]
position = Vector2(125, -62)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
centered = false
offset = Vector2(-6.5, -12)
region_enabled = true
region_rect = Rect2(95, 61, 13, 19)

[node name="Military" type="Node2D" parent="FactionSlider"]
position = Vector2(1300, 0)

[node name="Knight" type="Sprite2D" parent="FactionSlider/Military"]
self_modulate = Color(0.588235, 0.588235, 0.588235, 1)
position = Vector2(117, -66)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
offset = Vector2(-1, -2)
region_enabled = true
region_rect = Rect2(45, 63, 17, 17)

[node name="Knight2" type="Sprite2D" parent="FactionSlider/Military"]
position = Vector2(-75, -50)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
offset = Vector2(-1, -2)
region_enabled = true
region_rect = Rect2(45, 63, 17, 17)

[node name="TheSquad" type="Node2D" parent="FactionSlider"]
position = Vector2(1950, 0)

[node name="Pawn" type="Sprite2D" parent="FactionSlider/TheSquad"]
self_modulate = Color(0.588235, 0.588235, 0.588235, 1)
position = Vector2(-87, -83)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
offset = Vector2(0, -1)
region_enabled = true
region_rect = Rect2(48, 40, 13, 16)

[node name="Pawn2" type="Sprite2D" parent="FactionSlider/TheSquad"]
position = Vector2(57, -67)
scale = Vector2(16, 16)
texture = ExtResource("3_kn228")
offset = Vector2(0, -1)
region_enabled = true
region_rect = Rect2(48, 40, 13, 16)

[connection signal="pressed" from="CanvasLayer/Control/Buttons/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Buttons/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/StartButton" to="." method="_on_start_button_pressed"]
